--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@iconify/react": "^3.2.2",
     "clsx": "^1.2.1",
     "next": "^12.2.3",
     "next-themes": "^0.2.0",
