--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@iconify/react": "^3.2.2",
     "clsx": "^1.2.1",
+    "nanoid": "^4.0.0",
     "next": "^12.2.3",
     "next-themes": "^0.2.0",
     "react": "^18.2.0",
